<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClipboardActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_htmlintent">Html Intent Activity</string>
    <string name="title_activity_clipdataintent">ClipData Intent Activity</string>
    <string name="tvHtml"><![CDATA[<b>Link:</b> <a href="http://www.google.com">Google</a>]]></string>
    <string name="btCopy">Copy</string>
    <string name="btPaste">Paste</string>
    <string name="btSendHtmlIntent">send HTML Intent</string>
    <string name="btSendClipdataIntent">send ClipData Intent</string>
    <string name="rbHtml">Paste Html</string>
    <string name="rbText">Paste Text</string>
    <string name="tvCopiedText"><b><i>Copied text</i></b></string>
    <string name="tvcoerceText"><b><i>Copied coerce Text</i></b></string>
    <string name="tvIntentText"><b><i>Intent Text</i></b></string>
    <string name="tvIntentHtml"><b><i>Intent Html</i></b></string>
    <string name="tvIntentClipdataText"><b><i>Intent Clipdata Text</i></b></string>
    <string name="tvIntentClipdataHtml"><b><i>Intent Clipdata Html</i></b></string>

</resources>